--- a/package.json
+++ b/package.json
@@ -10,15 +10,25 @@
   },
   "dependencies": {
     "@pixi/react": "^8.0.3",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@types/canvas-confetti": "^1.9.0",
+    "canvas-confetti": "^1.9.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "colyseus.js": "^0.16.22",
     "howler": "^2.2.4",
+    "lucide-react": "^0.554.0",
     "motion": "^12.23.24",
     "next": "16.0.1",
     "pixi.js": "^8.14.1",
     "qrcode.react": "^4.2.0",
     "react": "19.2.0",
+    "react-canvas-confetti": "^2.0.7",
     "react-dom": "19.2.0",
+    "rough-notation": "^0.5.1",
     "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
